--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
   padding: 10px;
   background-color: #f9f9f9;
   border-radius: 50px;
-  border: 2px solid darkgreen;
+  border: 2px solid blue;
   margin-bottom: 10px;
 }
 
@@ -55,11 +55,18 @@ body {
 
 .container {
   margin-left: 270px;
-  width: 100%;
+  width: calc(100% - 270px);
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
   height: 100vh;
+}
+
+.top-button {
+  margin-top: 20px;
+  text-align: center;
+  width: 100%;
 }
 
 .buttons {
@@ -67,6 +74,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
 }
 
 .buttons button {
@@ -74,4 +82,36 @@ body {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
+}
+
+.back-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 50px;
+  background-color: darkgreen;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.back-button:hover {
+  background-color: green;
+}
+
+.left-button {
+  position: fixed;
+  left: 20px;
+  top: 20px;
+}
+
+.box-btn {
+  border-radius: 50px;
+  padding: 10px 40px;
+  cursor: pointer;
+  border: 2px solid darkgreen;
+}
+
+.box-btn:hover {
+  background-color: rgb(139, 138, 138);
+  color: black;
 }
