--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
   padding: 10px;
   background-color: #f9f9f9;
   border-radius: 50px;
-  border: 2px solid blue;
+  border: 2px solid darkgreen;
   margin-bottom: 10px;
 }
 
@@ -76,10 +76,15 @@ body {
   align-items: center;
   flex-grow: 1;
 }
+.buttons button:hover {
+  background-color: rgb(139, 138, 138);
+}
 
 .buttons button {
-  margin: 10px;
-  padding: 10px 20px;
+  border: 2px solid darkgreen;
+  border-radius: 20px;
+  margin: 5px;
+  padding: 15px 40px;
   font-size: 16px;
   cursor: pointer;
 }
