--- a/stylesC.css
+++ b/stylesC.css
@@ -38,18 +38,35 @@ body {
 }
 
 .content {
-  width: 80%;
+  width: 60%;
   max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 #searchBar {
   margin-top: 20px;
-  width: 400px; /* Increase the width as needed */
+  width: 100%;
   padding: 10px;
   margin-bottom: 20px;
   border-radius: 20px;
   border: 2px solid darkgreen;
   box-sizing: border-box;
+}
+
+.contact-list ul {
+  list-style-type: none;
+  padding: 0;
+  width: 100%;
+}
+
+.contact-list li {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
 .right-section {
@@ -60,6 +77,8 @@ body {
 }
 
 .right-section .create-btn {
+  margin-top: 20px;
+  margin-right: 50px;
   margin-bottom: 20px;
 }
 
@@ -69,7 +88,6 @@ body {
 
 #contactForm {
   margin-right: 50px;
-
   margin-top: 20px;
 }
 
@@ -86,11 +104,6 @@ body {
   width: 100%;
   padding: 8px;
   box-sizing: border-box;
-}
-
-.create-btn {
-  margin-right: 90px;
-  margin-top: 20px;
 }
 
 .create-btn,
